# controllers/authController.go
@@ -2,10 +2,12 @@ package controllers
 
 import (
 	"Final/models"
+	"Final/utils/token"
 	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"golang.org/x/crypto/bcrypt"
 	"gorm.io/gorm"
 )
 
@@ -19,6 +21,12 @@ type RegisterInput struct {
 	Password string `json:"password" binding:"required"`
 	Email    string `json:"email" binding:"required"`
 	Role     string `json:"role" binding:"required"`
+}
+
+type ChangePWInput struct {
+	Username    string `json:"username" binding:"required"`
+	OldPassword string `json:"old_password" binding:"required"`
+	NewPassword string `json:"new_password" binding:"required"`
 }
 
 // LoginUser godoc
@@ -106,4 +114,67 @@ func Register(c *gin.Context) {
 
 	c.JSON(http.StatusOK, gin.H{"message": "registration success", "user": user})
 
+}
+
+// ChangePassword godoc
+// @Summary Change user's password.
+// @Description Change user's password by providing the correct old password.
+// @Tags Auth
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Produce json
+// @Param Body body ChangePWInput true "the body to change user's password"
+// @Success 200 {string} string "Password updated successfully"
+// @Router /change_password [patch]
+func ChangePassword(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+
+	// Verifikasi token dan dapatkan user ID dari token yang terotentikasi
+	userID, err := token.ExtractUserID(c)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+
+	var input ChangePWInput
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Cek apakah user yang ingin mengubah password adalah user yang valid
+	// Pastikan hanya user tersebut yang dapat mengubah passwordnya
+	user := models.User{}
+	if err := db.First(&user, userID).Error; err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+		return
+	}
+
+	// Lakukan verifikasi password lama sebelum mengubah password
+	if err := models.VerifyPassword(input.OldPassword, user.Password); err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "incorrect old password"})
+		return
+	}
+
+	// Lakukan verifikasi apakah password baru sama dengan password lama
+	if input.OldPassword == input.NewPassword {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "new password cannot be the same as old password"})
+		return
+	}
+
+	// Ubah password user dengan password baru
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(input.NewPassword), bcrypt.DefaultCost)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to update password"})
+		return
+	}
+	user.Password = string(hashedPassword)
+
+	// Simpan perubahan pada user ke database
+	if err := db.Save(&user).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to update password"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "password updated successfully"})
 }
