# routes/routes.go
@@ -20,6 +20,7 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 	})
 	r.POST("/register", controllers.Register)
 	r.POST("/login", controllers.Login)
+	r.PATCH("/change_password", controllers.ChangePassword)
 
 	r.GET("/reviews", controllers.GetAllReview)
 	r.GET("/reviews/:id", controllers.GetReviewById)
